@@ -4,7 +4,9 @@
 #include "myctype.h"
 #include <signal.h>
 #include <setjmp.h>
+#if defined(HAVE_WAITPID) || defined(HAVE_WAIT3)
 #include <sys/wait.h>
+#endif
 #include <stdio.h>
 #include <time.h>
 #include <sys/stat.h>
